# flucs_fluid_etg

./: CITATION.cff  LICENSE  LICENSE.md  README.md  pyproject.toml
src/flucs_fluid_etg/: _version.py
src/flucs_fluid_etg/collisional_etg_fourier/: __init__.py  collisional_etg_fourier.cu  collisional_etg_fourier.py  collisional_etg_fourier.toml  collisional_etg_fourier_diagnostics.py
src/flucs_fluid_etg/collisional_etg_fourier/postprocessing/: check_conservation_energy.py  plot_heatflux_vs_time.py
